adding tests and readme, and extracting strings to resources